--- a/style/style.css
+++ b/style/style.css
@@ -3,36 +3,51 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    font-family: "headerText";
     
    
 }
+@font-face {
+    font-family: headerText;
+    src: url(../style/fonts/static/Roboto-Light.ttf);
+}
+
 
 .styleBody{
     background-color: #E2E8DD;
 }
 
-.fondoHeader{
-    height: 15vh;
+.headerStyle{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     background-color: #697268;
-    box-shadow: 0px 10px 15px black;
+    box-shadow: 0px 5px 5px black;
+
 }
-
-
-
 .fotoGonzalo{
 
     display: flex;
     width: 15vw;
     border-radius: 20px;
     box-shadow: 1px 1px 100px 50px  #4E5340;
-    margin: 7vw;
+    margin: 3vw;
     transition: 1s;
   
 }
 .fotoGonzalo:hover{
-    transform: scale(1.3) ;
-    transform: rotate(-0.01turn);
-    transform: rotate(0.01turn);
+    transform: scale(1.2) rotate(-0.02turn);
+    
+}
+
+.textoInicio{
+    font-size: 2em;
+}
+
+.mainStyle{
+    display: flex;
+    justify-content: center;
+    margin-top:  10vh;
 }
 
 
