--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,11 @@
 }
 @font-face {
     font-family: headerText;
-    src: url(../style/fonts/static/Roboto-Light.ttf);
+    src: url(../style/fonts/headerText/static/Roboto-SemiBold.ttf)
+}
+
+.link {
+    text-decoration: none;
 }
 
 
@@ -23,31 +27,119 @@
     align-items: center;
     background-color: #697268;
     box-shadow: 0px 5px 5px black;
-
+    padding: 6vh;
 }
 .fotoGonzalo{
 
     display: flex;
-    width: 15vw;
+    width: 12vw;
     border-radius: 20px;
     box-shadow: 1px 1px 100px 50px  #4E5340;
     margin: 3vw;
     transition: 1s;
   
 }
+
+.efectoPerfil {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: 1s;
+}
+
 .fotoGonzalo:hover{
-    transform: scale(1.2) rotate(-0.02turn);
-    
+    transform: scale(1.2) rotate(-0.02turn) translate(-30px);    
 }
 
 .textoInicio{
-    font-size: 2em;
+    font-size: 1.5rem;
 }
 
-.mainStyle{
+.navText {
+    color: black;
+    padding: 3vw;
+    font-size: x-large;
+    transition: 1s;
+}
+
+.navText:hover{
+    color: #E2E8DD;
+    text-decoration: dashed;
+    font-size: 1.8rem;
+    padding: 3.5vw;
+}
+
+
+
+.mainDescripcion{
     display: flex;
     justify-content: center;
-    margin-top:  10vh;
+    align-items: center;
+    margin: 5vw;
 }
+
+.mainSkills{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5vw;
+}
+
+.columnasSkills{
+    display:grid;    
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 100%;
+    grid-column-gap: 10vw;
+}
+
+.centerColumnas{
+    display: flex;
+    justify-content: center;
+}
+
+.mainTextSkills{
+    font-size: 2rem;
+    padding-bottom: 8vh;
+}
+
+.textSkills{
+    text-decoration: underline;
+}
+
+.proyectoHeader{
+    
+    display: flex;
+    justify-content: center;
+    padding: 4vw;
+}
+
+.mainProyectos{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5vw;
+}
+
+.proyectoGrid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 5vw;
+}
+
+.fotoProyectos{
+    width: 30vw;
+    border: 2px solid black;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.fotoProyectos:hover{
+    transform: scale(1.2);
+}
+
 
 
