--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@
 
 .link {
     text-decoration: none;
+    color: black;
 }
 
 
@@ -34,9 +35,9 @@
     display: flex;
     width: 12vw;
     border-radius: 20px;
-    box-shadow: 1px 1px 100px 50px  #4E5340;
+    box-shadow: 1px 1px 100px 40px  #4E5340;
     margin: 3vw;
-    transition: 1s;
+    transition: 2s;
   
 }
 
@@ -48,7 +49,8 @@
 }
 
 .fotoGonzalo:hover{
-    transform: scale(1.2) rotate(-0.02turn) translate(-30px);    
+    transform: scale(1.2) rotate(-0.02turn) translate(-50px); 
+     
 }
 
 .textoInicio{
@@ -59,7 +61,7 @@
     color: black;
     padding: 3vw;
     font-size: x-large;
-    transition: 1s;
+    transition: 0.2s;
 }
 
 .navText:hover{
@@ -116,6 +118,7 @@
 }
 
 .mainProyectos{
+    font-size: 1.4rem;
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -134,11 +137,63 @@
     width: 30vw;
     border: 2px solid black;
     border-radius: 10px;
-    transition: 1s;
+    transition: 0.2s;
+    opacity: 0.5;
 }
 
 .fotoProyectos:hover{
     transform: scale(1.2);
+    opacity: 1;
+}
+
+.contactosHeader{
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    padding: 4vw;
+}
+
+.cajaContacto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    padding: 2vw;
+    margin-bottom: 4vh;
+    border: 0px solid black;
+    border-radius: 10px;
+    background-color: #697268;
+}
+
+.caja{
+    width: 50vw;
+}
+
+.cajaMensaje{
+    height: 15vh;
+}
+
+.footerCaja{
+    background-color: #4E5340;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 15vh;
+    margin-top: 4vw;
+    box-shadow: 0px -5px 50px black;
+}
+
+.fotoLogos{
+    width: 3vw;
+    margin: 10px;
+    opacity: 0.8;
+    transition: 0.2s;
+}
+
+.fotoLogos:hover{
+    transform: scale(1.5);
 }
 
 
